// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form element produces output containing children 1`] = `
<div
  className="MuiBox-root css-0"
  id="app.page1.form1"
>
  <h6
    className="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
    style={{}}
  >
    Test Form 1
  </h6>
  <div
    className="MuiStack-root css-121a6wt-MuiStack-root"
  >
    <div
      className="MuiFormControl-root MuiTextField-root css-jznhkk-MuiFormControl-root-MuiTextField-root"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink={true}
        htmlFor="app.page1.form1.Description"
        id="app.page1.form1.Description-label"
      >
        Description
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
          disabled={false}
          id="app.page1.form1.Description"
          maxLength={10}
          minLength={2}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
          value="Big"
        />
        <fieldset
          aria-hidden={true}
          className="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="css-w1u3ce"
          >
            <span>
              Description
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      className="MuiFormControl-root MuiTextField-root css-qboax1-MuiFormControl-root-MuiTextField-root"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink={true}
        htmlFor="app.page1.form1.BoxSize"
        id="app.page1.form1.BoxSize-label"
      >
        Size
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
          disabled={false}
          id="app.page1.form1.BoxSize"
          max={20}
          min={1}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="number"
          value="17"
        />
        <fieldset
          aria-hidden={true}
          className="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="css-w1u3ce"
          >
            <span>
              Size
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      id="app.page1.form1.Feedback"
      style={{}}
    >
      Size is 17
    </div>
  </div>
</div>
`;

exports[`Form element produces output containing nested form 1`] = `
<div
  className="MuiBox-root css-0"
  id="app.page1.formNested"
>
  <h6
    className="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
    style={{}}
  >
    Test Form 1
  </h6>
  <div
    className="MuiStack-root css-121a6wt-MuiStack-root"
  >
    <div
      className="MuiFormControl-root MuiTextField-root css-jznhkk-MuiFormControl-root-MuiTextField-root"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink={true}
        htmlFor="app.page1.formNested.Description"
        id="app.page1.formNested.Description-label"
      >
        Description
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
          disabled={false}
          id="app.page1.formNested.Description"
          maxLength={10}
          minLength={2}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
          value="Big"
        />
        <fieldset
          aria-hidden={true}
          className="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="css-w1u3ce"
          >
            <span>
              Description
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      className="MuiFormControl-root MuiTextField-root css-qboax1-MuiFormControl-root-MuiTextField-root"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink={true}
        htmlFor="app.page1.formNested.BoxSize"
        id="app.page1.formNested.BoxSize-label"
      >
        Size
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
          disabled={false}
          id="app.page1.formNested.BoxSize"
          max={20}
          min={1}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="number"
          value="17"
        />
        <fieldset
          aria-hidden={true}
          className="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="css-w1u3ce"
          >
            <span>
              Size
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <div
      className="MuiBox-root css-0"
      id="app.page1.formNested.Extra"
    >
      <h6
        className="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
        style={{}}
      />
      <div
        className="MuiStack-root css-121a6wt-MuiStack-root"
      >
        <div
          className="MuiFormControl-root MuiTextField-root css-jznhkk-MuiFormControl-root-MuiTextField-root"
        >
          <label
            className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-hvjq6j-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink={true}
            htmlFor="app.page1.formNested.Extra.Description"
            id="app.page1.formNested.Extra.Description-label"
          >
            Description
          </label>
          <div
            className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              autoFocus={false}
              className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
              disabled={false}
              id="app.page1.formNested.Extra.Description"
              maxLength={10}
              minLength={2}
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="text"
              value="Extra Big"
            />
            <fieldset
              aria-hidden={true}
              className="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
            >
              <legend
                className="css-w1u3ce"
              >
                <span>
                  Description
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      id="app.page1.formNested.Feedback"
      style={{}}
    >
      Size is 17
    </div>
  </div>
</div>
`;

exports[`Form element produces output with no children 1`] = `
<div
  className="MuiBox-root css-0"
  id="app.page1.formEmpty"
>
  <h6
    className="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
    style={{}}
  />
  <div
    className="MuiStack-root css-121a6wt-MuiStack-root"
  />
</div>
`;

exports[`Form element produces output with one child 1`] = `
<div
  className="MuiBox-root css-0"
  id="app.page1.formSingle"
>
  <h6
    className="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
    style={{}}
  />
  <div
    className="MuiStack-root css-121a6wt-MuiStack-root"
  >
    <div
      className="MuiFormControl-root MuiTextField-root css-jznhkk-MuiFormControl-root-MuiTextField-root"
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined css-1kfabtt-MuiFormLabel-root-MuiInputLabel-root"
        data-shrink={false}
        htmlFor="app.page1.formSingle.Description"
        id="app.page1.formSingle.Description-label"
      >
        Description
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
        onClick={[Function]}
      >
        <input
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1pzfmz2-MuiInputBase-input-MuiOutlinedInput-input"
          disabled={false}
          id="app.page1.formSingle.Description"
          maxLength={10}
          minLength={2}
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          type="text"
          value=""
        />
        <fieldset
          aria-hidden={true}
          className="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="css-81qg8w"
          >
            <span>
              Description
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;
